--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,8 @@ jobs:
       - name: check env
         run: echo $REGISTRY/$IMAGE_NAME
       - name: Build docker image
-        run: ./gradlew bootBuildImage --imageName=$REGISTRY/$IMAGE_NAME
+        run: docker build . --file Dockerfile --tag $REGISTRY/$IMAGE_NAME:latest
+
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
